# VexiiFirmware

./: .gitignore  CMakeLists.txt  Makefile  default.ld  default.ld_other  main.c  main.cpp
app/: CMakeLists.txt  setup.cmake
app/hello_world/: CMakeLists.txt
app/uart/: CMakeLists.txt
cmake/device/: vexiiriscv.cmake
common/: CMakeLists.txt
common/hal/: CMakeLists.txt
common/hal/clint/: clint.hpp
common/hal/gpio/: gpio.hpp
common/hal/plic/: plic.hpp
common/hal/riscv/clint/: clint.hpp
common/hal/uart/: uart.hpp
common/system/: CMakeLists.txt  peripherals.hpp  soc.cpp  soc.hpp
common/utils/: CMakeLists.txt
device/microsoc/default/: CMakeLists.txt
device/microsoc/default/linker/: ram.ld
device/microsoc/default/system/: peripherals.hpp  soc.hpp
device/microsoc/socA/system/: CMakeLists.txt
examples/: CMakeLists.txt  setup.cmake
examples/hello_world/: CMakeLists.txt  main.cpp
examples/uart/: CMakeLists.txt  main.cpp
hal/: CMakeLists.txt
hal/clint/: clint.hpp
hal/legacy/: CMakeLists.txt  clint.h  plic.h  uart.h
hal/plic/: plic.hpp
hal/uart/: uart.hpp
